Updated css for form editor, removed quill css

--- a/_layouts/edit-post.html
+++ b/_layouts/edit-post.html
@@ -35,7 +35,7 @@ layout: page
                         <span class="required">Content</span>
                     </label>
                     <!-- Create the editor container -->
-                    <div id="toast-update-editor">        
+                    <div id="toast-update-editor" class="toast-editor">        
                     </div>
                 </div> 
                 <div>
