--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,4 +55,6 @@
 
   {% include head-custom.html %}
 
+  <link rel="stylesheet" href="{{ '/assets/css/form-editor.css' | relative_url }}">
+
 </head>
