--- a/_includes/page-date.html
+++ b/_includes/page-date.html
@@ -1,4 +1,7 @@
 <time class="page-date dt-published" datetime="{{ page.date | date_to_xmlschema }}">
   {%- assign date_format = site.date_format | default: "%B %-d, %Y" -%}
   <a class="u-url" href="{{ entry.url | relative_url }}">{{ page.date | date: date_format }}</a>
+  {% if page.updated %}
+    <h5>Last updated: {{ page.updated | date: date_format }}</h5>
+  {% endif %}
 </time>
