--- a/_includes/page-date.html
+++ b/_includes/page-date.html
@@ -5,3 +5,10 @@
     <h5>Last updated: {{ page.updated | date: date_format }}</h5>
   {% endif %}
 </time>
+<script>
+  fetch("/howlongago?updated=2016-12-01T00:00:00")
+      .then(response => response.json())
+      .then(data => {
+        console.log(`* response: ${data}`);
+      });
+</script>
