--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -7,7 +7,7 @@ layout: page
 <section class="content-container">
   <div class="container">
     <p>
-      {% assign url = '/new-post' | relative_url %}      
+      {% assign url = '/add-post' | relative_url %}      
       <a href="{{ url }}"><div class="label-header">Add a new post</div></a>
     </p>
     <ul class="taxonomy-index">
