--- a/_sass/so-simple/_page.scss
+++ b/_sass/so-simple/_page.scss
@@ -306,7 +306,7 @@ h1, .h1 {
 .layout--category,
 .layout--tag,
 .layout--collection,
-.layout--new-post,
+.layout--add-post,
 .layout--edit-post,
 .layout--search {
   .page-wrapper {
