Removed Quill scripts, moved ToastUI scripts from cdn to local

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,6 +55,8 @@
 
   {% include head-custom.html %}
 
+  {% include toastui-scripts.html %}
+
   <link rel="stylesheet" href="{{ '/assets/css/form-editor.css' | relative_url }}">
 
 </head>
