Adjust home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,6 +34,7 @@ layout: page
       const image = document.createElement("img");
       image.classList.add('entry-feature-image');
       image.classList.add('u-photo');
+      image.classList.add('fade-in');
       image.src = imageUrl;
       image.alt = "Developer Portal";
 
