--- a/_sass/so-simple/_home.scss
+++ b/_sass/so-simple/_home.scss
@@ -168,6 +168,66 @@
     position: relative;
   }
   
+  .fade-in {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s linear;
+  }
+  
+  .fade-in {
+    animation-name: fade;
+  }
+  
+  @keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @-moz-keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @-webkit-keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @-o-keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @-ms-keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+
   @media screen and (max-width: 390px) {
     .icon-end {
       visibility: hidden;
