Added dark theme for editor

--- a/_layouts/add-post.html
+++ b/_layouts/add-post.html
@@ -53,8 +53,8 @@ layout: page
             height: '600px',
             initialEditType: 'markdown',
             previewStyle: 'vertical',
-            intialValue: 'Enter your awesome content!'
-            //theme: 'dark',
+            intialValue: 'Enter your awesome content!',
+            theme: 'dark'
             //plugins: [[codeSyntaxHighlight, { highlighter: Prism }], [colorSyntax], [tableMergedCell]]
         });
 
