--- a/_layouts/edit-post.html
+++ b/_layouts/edit-post.html
@@ -27,6 +27,12 @@ layout: page
                     </label>
                 </div>
                 <div>
+                    <label class="label-tags">
+                        <input id="newPostAuthor" type="text" class="" name="tags" placeholder="Enter author" tabindex="4" required />
+                        <span class="required">Updated by</span>
+                    </label>
+                </div> 
+                <div>
                     <label class="label-content">  
                         <span class="required">Content</span>
                     </label>
@@ -112,6 +118,8 @@ layout: page
             .then(response => response.json())
             .then(data => {
                 if (data.clientPrincipal) {  
+                    console.log(`${data.clientPrincipal.userDetails}`);
+
                     const loggedUser = document.getElementById('newPostAuthor');                                  
                     loggedUser.value = `${data.clientPrincipal.userDetails}`;                        
                 }
