Fixed bugs with author

--- a/_layouts/add-post.html
+++ b/_layouts/add-post.html
@@ -28,7 +28,7 @@ layout: page
                 </div>  
                 <div>
                     <label class="label-tags">
-                        <input id="newPostAuthor" type="text" class="" name="tags" placeholder="Enter author" tabindex="4" required />
+                        <input id="newPostAuthor" type="text" class="" name="author" placeholder="Enter author" tabindex="4" />
                         <span class="required">Created by</span>
                     </label>
                 </div>        
